# erikfran-raytracer

./: Cargo.toml  README.md
cpu/images/: image10.ppm  image102.ppm  image104.ppm  image107.ppm  image108.ppm  image116.ppm  image117.ppm  image123.ppm  image125.ppm  image127.ppm  image14.ppm  image142.ppm  image143.ppm  image144.ppm  image145.ppm  image147.ppm  image148.ppm  image149.ppm  image150.ppm  image151.ppm  image152.ppm  image153.ppm  image154.ppm  image155.ppm  image156.ppm  image157.ppm  image158.ppm  image17.ppm  image18.ppm  image2.ppm  image31.ppm  image34.ppm  image36.ppm  image37.ppm  image38.ppm  image42.ppm  image43.ppm  image45.ppm  image46.ppm  image59.ppm  (+26 more)
cpu/src/: lights.rs  main.rs  math.rs  object.rs  ray.rs
gpu/: Cargo.toml
gpu/src/: compute.rs  fragment.rs  main.rs  shader.wgsl
images/: image0.ppm  image1.ppm  image100.ppm  image101.ppm  image103.ppm  image105.ppm  image106.ppm  image109.ppm  image110.ppm  image111.ppm  image112.ppm  image113.ppm  image114.ppm  image115.ppm  image118.ppm  image119.ppm  image120.ppm  image16.ppm  image19.ppm  image20.ppm  image28.ppm  image29.ppm  image32.ppm  image33.ppm  image35.ppm  image40.ppm  image41.ppm  image44.ppm  image52.ppm  image53.ppm  image54.ppm  image55.ppm  image56.ppm  image57.ppm  image58.ppm  image60.ppm  image61.ppm  image62.ppm  image69.ppm  image70.ppm  (+10 more)
simd/: Cargo.toml
simd/src/: main.rs  material.rs  math.rs  mesh.rs
src/: compute.rs  main.rs  material.rs  math.rs  mesh.rs  object.rs  primitives.rs  ray.rs  shader.wgsl
