[package]
name = "erikfran-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
pollster = "0.3.0"
wgpu = "0.18.0"
bytemuck = { version = "1.12.1", features = ["derive"] }
env_logger = "0.10.1"
flume = "0.11"
renderdoc = "0.11.0"
# futures-intrusive = "0.4"
# wasm_bindgen = "0.2.76"
# console_error_panic_hook = "0.1.7"
