[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3"
wgpu = "0.18.0"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
flume = "0.11"
renderdoc = "0.11.0"
winit = "0.28.7"
# futures-intrusive = "0.4"
# wasm_bindgen = "0.2.76"
# console_error_panic_hook = "0.1.7"
